# task-todos-build-test

./: .gitignore  404.html  index.html  main.py  makebin.py  pyproject.toml  run.py
.github/workflows/: pyinstaller-release-build.yml
app/: config.py  main.py  models.py
app/controllers/: tasks.py
app/ui/: add_task_dialog.py  main.py
docs/: mkdocs.yml
docs/docs/: guide.md  index.md
guide/: index.html
pyside6_ui/: add_task_dialog.ui  main.ui
scripts/: build-post-generate.py  generate-client-ui.py
search/: search_index.json
